<resources>
    <string name="app_name">"MyDo's"</string>
    <string name="tab_label_todos">TODOs</string>
    <string name="tab_label_notes">Notizen</string>
    <string name="tab_label_settings">Einstellungen</string>
    <string name="text_label_new_todo">Neuer TODO Eintrag</string>
    <string name="new_todo_title_hint">Titel</string>
    <string name="new_todo_content_hint">Beschreibung (Optional)</string>
    <string name="new_todo_add_content">Beschreibung</string>
    <string name="new_todo_priority">Priorität</string>
    <string name="new_todo_add_todo">Zur TODO-Liste hinzufügen</string>
    <string name="new_todo_reset_execution">Zurücksetzen</string>
    <string name="new_todo_enable_notification">Benachrichtigung aktivieren</string>
    <string name="new_todo_date_label">Datum:</string>
    <string name="new_todo_execution_date">Zeitliche Ausführung</string>
    <string name="new_todo_hasChanges_title">Nicht gespeicherte Änderungen</string>
    <string name="new_todo_hasChanges_message">Wollen sie die Änderungen verwerfen?</string>
    <string name="new_todo_hasChanges_positive_button">Verwerfen</string>
    <string name="new_todo_hasChanges_negative_button">Nein</string>
    <string name="global_cancel">Abbrechen</string>
    <string name="new_todo_title_error">Titel erforderlich!</string>
    <string name="tab_todos_empty_todo_list">Kein TODOs vorhanden</string>
    <string name="todo_priotiy_very_low">Sehr niedrig</string>
    <string name="todo_priotiy_low">Niedrig</string>
    <string name="todo_priotiy_default">Normal</string>
    <string name="todo_priotiy_high">Hoch</string>
    <string name="todo_priotiy_very_high">Sehr hoch</string>
    <string name="todos_enable_sorting_label">Sortierung aktiveren</string>
    <string name="settings_option_delete_oncheck">TODOs beim abhaken löschen</string>
    <string name="settings_option_show_deleted_todos">Gelöschte TODOs anzeigen</string>
    <string name="settings_option_show_done_todos">Fertige TODOs anzeigen</string>
    <string name="todos_date_label">Ausführungsdatum</string>
    <string name="todos_time_label">Ausführungszeit</string>
    <string name="todos_sort_hint">Sortieren</string>
    <string name="todos_sort_by_execution_date">Nach Ausführungsdatum</string>
    <string name="todos_sort_by_date_created">Nach Erstelldatum</string>
    <string name="todos_sort_by_priority">Nach Priorität</string>
    <string name="todos_delete_snackbar_text">TODO-Eintrag wurde gelöscht.</string>
    <string name="global_undo">Rückgängig</string>
</resources>