<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newtodoInputTitleWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_todo_title_hint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newtodoInputTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.slider.Slider
            android:id="@+id/newtodoSliderPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="25"
            android:value="50"
            android:valueFrom="0"
            android:valueTo="100">

        </com.google.android.material.slider.Slider>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/new_todo_priority" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/newtodoPriorityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_priotiy_default" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/newtodoSwitchAddContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/new_todo_add_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newtodoInputContentWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_todo_content_hint"
        android:visibility="gone"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/newtodoInputContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newtodoButtonNewTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_todo_add_todo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newtodoButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/global_cancel" />

    </LinearLayout>

</LinearLayout>