<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".general.tabs.settings.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsOptionShowDeletedTodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/settings_option_show_deleted_todos" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsOptionShowDoneTodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/settings_option_show_done_todos" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsOptionDeleteOnCheckTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/settings_option_delete_oncheck" />


</LinearLayout>