<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.customcomponent.datetimeselection.DateTimeSelectionFragment">

    <Button
        android:id="@+id/newTodoExpandDatePicker"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/ic_baseline_expand_more_24"
        android:text="@string/todos_date_label"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/newTodoDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <DatePicker
            android:id="@+id/newTodoDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:animateLayoutChanges="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/newTodoResetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_delete_24"
            android:text="@string/new_todo_reset_execution"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#c0c0c0" />

    </LinearLayout>

    <Button
        android:id="@+id/newTodoExpandTimePicker"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/ic_baseline_expand_more_24"
        android:text="@string/todos_time_label"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/newTodoTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TimePicker
            android:id="@+id/newTodoTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />


        <Button
            android:id="@+id/newTodoResetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_delete_24"
            android:text="@string/new_todo_reset_execution"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#c0c0c0" />

    </LinearLayout>


</LinearLayout>